<resources>
    <!-- activity_login.xml -->

    <string name="app_name">Scores</string>
    <string name="titleLoginActivity">Connection</string>
    <string name="btnLogin">Log in</string>
    <string name="btnRegister">Register</string>
    <string name="hintLogin">Login</string>
    <string name="hintPassword">Password</string>
    <string name="loginMessage">You need to log in to access the application.</string>

    <!-- activity_register.xml-->

    <string name="titleRegisterActivity">Registration</string>
    <string name="hintConfirmPassword">Confirm your password</string>
    <string name="btnSave">Save</string>
    <string name="registered">You have been successfully registered!</string>

    <!-- activity_home.xml -->

    <string name="titleHomeActivity">Home</string>
    <string name="btn_addScore">Add a score</string>
    <string name="btn_displayTop">Top 10 of a game</string>
    <string name="btn_displayList">Display games</string>
    <string name="btn_listUser">List of users</string>
    <string name="hello">Hello</string>
    <string name="helloQuestion">What do you want to do?</string>

    <!-- activity_add_score.xml -->

    <string name="titleAddScoreActivity">Add a score</string>
    <string name="hintScore">Score</string>
    <string name="hintNameGame">Name of the game</string>
    <string name="btn_games">Games</string>
    <string name="scoreAdded">Your score has been successfully added!</string>

    <!-- activity_games_wizard.xml -->

    <string name="titleGames">List of games :</string>
    <string name="labelGamesWizard">Game selector</string>
    <string name="btn_select">Select</string>

    <!-- activity_games.xml -->

    <string name="titleGamesActivity">List of games</string>

    <!-- activity_top.xml -->

    <string name="titleTopActivity">Top 10</string>

    <!-- activity_users.xml -->

    <string name="titleUsersActivity">Users</string>

    <!-- Error messages -->

    <string name="error">Error</string>
    <string name="unknownError">Unknown error</string>
    <string name="errorLogin">Connection refused!</string>
    <string name="errorConfirmPasswd">Passwords are different!</string>
    <string name="errorMissingField">Missing field!</string>
    <string name="errorUserExist">This user already exist!</string>
    <string name="errorDB">Error with database!</string>
    <string name="errorLoginPasswd">Bad login or password!</string>
    <string name="errorGameEmpty">Game field is empty!</string>
    <string name="errorNoPlayerFound">No player found for this game!</string>
    <string name="errorNoGameFound">No game found!</string>
    <string name="errorNoScore">Score field is empty!</string>
    <string name="errorIntToLong">Score is too long!</string>
    <string name="errorConnection">Connection error!</string>

    <!-- Dialogs -->

    <string name="closeApp">Do you want to close this app ?</string>
    <string name="loading">Loading...</string>
</resources>
