<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="be.condorcet.marra.scores.RegisterActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginTop="90dp"
            android:id="@+id/et_Login"
            android:hint="@string/hintLogin"
            android:layout_width="300dp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="24dp"
            android:id="@+id/et_Passwd"
            android:hint="@string/hintPassword" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="23dp"
            android:id="@+id/et_Confirm"
            android:hint="@string/hintConfirmPassword" />

        <Button
            android:text="@string/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="89dp"
            android:id="@+id/btn_Save" />
    </LinearLayout>
</ScrollView>
