<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.condorcet.marra.scores.LoginActivity">

    <TextView
        android:text="@string/loginMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_LoginMessage"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_Login"
        android:hint="@string/hintLogin"
        android:layout_weight="1"
        android:layout_above="@+id/et_Passwd"
        android:layout_alignStart="@+id/tv_LoginMessage"
        android:layout_marginBottom="24dp"
        android:layout_alignEnd="@+id/tv_LoginMessage" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginBottom="46dp"
        android:layout_height="55dp"
        android:id="@+id/btnLoginLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btn_Login"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/et_Passwd"
            android:layout_weight="1" />

        <Button
            android:text="@string/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btn_Register"
            android:layout_alignEnd="@+id/et_Passwd"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:id="@+id/tv_ErrorMessage"
        android:layout_width="match_parent"
        android:layout_marginBottom="46dp"
        android:layout_above="@+id/btnLoginLayout"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_Passwd"
        android:hint="@string/hintPassword"
        android:layout_marginBottom="44dp"
        android:layout_above="@+id/tv_ErrorMessage"
        android:layout_alignStart="@+id/et_Login"
        android:layout_alignEnd="@+id/et_Login" />

</RelativeLayout>
