<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="be.condorcet.marra.scores.TopActivity"
        android:orientation="vertical"
        android:gravity="center"

    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:id="@+id/horizontalLayout">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_nameGame"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:hint="@string/hintNameGame" />

            <Button
                android:text="@string/btn_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_games"
                android:layout_margin="10dp"/>
        </LinearLayout>

        <Button
            android:text="@string/btn_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_selectGame"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:text="Top 10: "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_weight="1.02"
            android:id="@+id/topList" />

    </LinearLayout>


</ScrollView>
